# template-django-vite

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.mjs
apps/core/: urls.py
config/: settings.py  urls.py
static/: input.js
templates/: base.html  home.html
