[tool.poetry]
name = "edukae-django"
version = "0.1.0"
description = ""
authors = ["Lucas Pires Nogueira <piresnogueiralucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-cotton = "^0.9.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
